Issue #28152: Fix -Wunreachable-code warning on clang

Replace C if() with precompiler #if to fix a warning on dead code when using
clang.